# web-all

./: .dockerignore  .env.example  .gitignore  .pylintrc  AUDIT_REPORT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_SUMMARY.md  ERROR_LOGGING_SYSTEM_SUMMARY.md  FEATURES_SUMMARY.md  FEATURES_UPDATE.md  FEATURE_IMPROVEMENTS.md  FINAL_IMPROVEMENTS_REPORT.md  FINAL_VERIFICATION_REPORT.md  GOD_LEVEL_UPDATE.md  HOW_TO_USE.md  KUBUNTU_INSTALLATION_GUIDE.md  Makefile  NEW_FEATURES.md  NVIDIA_INTEGRATION_GUIDE.md  OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  SECURITY_REFACTORING_REPORT.md  SPECIFICATION.md  SUMMARY.md  V4.2_FINAL_VERIFICATION.md  V4.2_PLAYWRIGHT_FIXED.md  VERIFICATION_REPORT.md  WEB_GOD_MODE_GUIDE.md  architecture_diagram.md  docker-compose.yml  install.sh  installer.sh  omnicore_checkpoint.json  (+6 more)
.github/workflows/: ci.yml  pylint.yml  python-publish.yml
output/clone_00f8c375/example_com/: README.txt  index.html  manifest.json
output/clone_03a0c208/example_com/: README.txt  index.html  manifest.json
output/clone_044bfab6/example0_com/: README.txt  manifest.json
output/clone_0477d19c/example6_com/: README.txt  index.html  manifest.json
output/clone_0483dce3/: README.txt  manifest.json
output/clone_05e2f53c/example_com/: README.txt  index.html  manifest.json
output/clone_05f6d777/: README.txt  manifest.json
output/clone_07ff4875/example_com/: README.txt  index.html  manifest.json
output/clone_08048b70/example_com/: README.txt  index.html  manifest.json
output/clone_0989a00a/example_com/: README.txt  index.html  manifest.json
output/clone_0e7f20ad/: README.txt  manifest.json
output/clone_1b6c9f87/: README.txt  manifest.json
output/clone_212fb571/: README.txt  manifest.json
output/clone_37e488ec/: README.txt  manifest.json
output/clone_3e74d25d/: README.txt  manifest.json
output/clone_5a5bf318/: README.txt  manifest.json
output/clone_65870480/: README.txt  manifest.json
output/clone_68530fa3/: README.txt  manifest.json
output/clone_6b47f41a/: README.txt  manifest.json
output/clone_6c8fcb1b/: README.txt  manifest.json
output/clone_7dcea97d/: README.txt  manifest.json
output/clone_808047a4/: README.txt  manifest.json
output/clone_904a4b47/: README.txt  manifest.json
output/clone_93eac6a7/: README.txt  manifest.json
output/clone_98ed73fe/: README.txt  manifest.json
output/clone_a142be1a/: README.txt  manifest.json
output/clone_ad1a6aa4/: README.txt  manifest.json
output/clone_c0323890/: README.txt  manifest.json
output/clone_d3f989c7/: README.txt  manifest.json
output/clone_df1a6fad/: README.txt  manifest.json
output/clone_fe9a6710/: README.txt  manifest.json
output/clone_ffb805b7/: README.txt  manifest.json
test_output/example_com/: README.txt  index.html  manifest.json
tests/: test_api.py  test_web_all.py
web-cloner/: README.md  install.sh  package.json
web-cloner/config/: default.yaml
web-cloner/src/: CloneManager.js  index.js
web_all/: __init__.py  advanced.py  analytics.py  api.py  cli.py  cloner.py  config.py  frontend.py  invisible.py  logger.py  tor_device.py  universal_downloader.py
web_all.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web_all/api/: __init__.py  app.py  server.py
web_all/core/: __init__.py  cloner.py  invisible.py
web_all/database/: __init__.py
web_all/god_level/: __init__.py  access_control.py  analytics_dashboard.py  auth_handler.py  browser_cluster.py  cloud_integration.py  compliance_tools.py  content_quality.py  distributed_crawler.py  evasion_engine.py  export_formats.py  intelligent_cache.py  js_execution.py  multi_protocol.py  multimodal_ai.py  neural_engine.py  nl_interface.py  scheduler.py  semantic_search.py  seo_tools.py  team_collab.py  workflow_automation.py
web_all/gui/: domain_cloning_errors.html  error_logs.html  index.html
web_all/i18n/: __init__.py
web_all/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
web_all/logs/: README.md
web_all/models/: __init__.py
web_all/services/: __init__.py  seo_service.py
web_all/templates/: base.html
web_all/utils/: __init__.py  ai_engine.py  logger.py  report_generator.py  security.py  seo_analyzer.py  zip_utils.py
web_all_final/: INSTALLATION_GUIDE.md  README.md  cli.py  install.sh
web_all_project/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  FINAL_SUMMARY.md  INSTALLATION_GUIDE.md  README.md  SECURITY.md  TESTING_SUMMARY.md  UPDATE_SUMMARY.md  cli.py  docker-compose.yml  infinityfree_setup.php  install.sh  install_and_run.sh  prometheus.yml  pyproject.toml
web_all_project/final_test_output/example_com/: README.txt  index.html  manifest.json
web_all_project/output/test_clone/: manifest.json
web_all_project/output/test_example/: manifest.json
web_all_project/test_assets/httpbin_org/: index.html
web_all_project/test_cli_output/: manifest.json
web_all_project/test_cli_output/example_com/: README.txt  index.html  manifest.json
web_all_project/tests/: test_api_extreme.py  test_auth.py  test_extreme.py  test_web_all.py
web_all_project/web_all/: __init__.py  config.py  logging_config.py  metrics.py
web_all_project/web_all.egg-info/: SOURCES.txt  requires.txt
web_all_project/web_all/api/: __init__.py  server.py
web_all_project/web_all/core/: __init__.py  cloner.py
web_all_project/web_all/gui/: index.html
web_all_project/web_all/utils/: __init__.py  ai_engine.py  auth.py  retry_utils.py  zip_utils.py
web_all_v2/: README.md  __init__.py  pyproject.toml
web_all_v2/cli/: main.py
web_all_v2/config/: settings.py
web_all_v2/core/: __init__.py  cloner.py  component_extractor.py  crawler.py  design_token_extractor.py  visibility_manager.py
weball/: README.md  __init__.py  pyproject.toml  weball_noob.py
weball/admin/: panel.py
weball/backend/: service.py
weball/core/: invisible.py
weball/frontend/: app.py
weball/users/: manager.py
(+722 files in other folders)
