[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-all"
version = "4.0.0"
description = "Universal Website Cloner with AI - Clone websites, discover hidden content, auto-organize assets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "web-all Team", email = "team@web-all.dev"}]
keywords = ["website", "cloner", "crawler", "scraper", "downloader", "archive", "mirror", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "playwright>=1.40.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "black>=24.0.0", "ruff>=0.1.0"]

[project.scripts]
web-all = "web_all.cli:main"
wa = "web_all.cli:main"

[project.urls]
Homepage = "https://github.com/web-all/web-all"
Documentation = "https://github.com/web-all/web-all#readme"
Repository = "https://github.com/web-all/web-all.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["web_all*"]

[tool.setuptools.package-data]
"web_all" = ["gui/*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
