[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-all"
version = "4.0.0"
description = "Universal Website Cloner with AI - God Level v4.0 with 7 Tiers and 21 Features"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "web-all Team", email = "team@web-all.dev"}]
keywords = ["website", "cloner", "crawler", "scraper", "downloader", "archive", "mirror", "ai", "god-level", "neural", "multimodal", "distributed"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "playwright>=1.40.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    # God Level Features v4.0 Dependencies
    "redis>=5.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "celery>=5.3.0",
    "schedule>=1.2.0",
    "croniter>=2.0.0",
    "boto3>=1.34.0",
    "google-cloud-storage>=2.10.0",
    "azure-storage-blob>=12.19.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "weasyprint>=60.0",
    "ebooklib>=0.18",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "aioftp>=0.21.0",
    "gql[all]>=3.5.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.21.0", "black>=24.0.0", "ruff>=0.1.0", "pytest-cov>=4.1.0"]
god-level-all = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "opencv-python>=4.9.0",
    "speechrecognition>=3.10.0",
    "pydub>=0.25.0",
]

[project.scripts]
web-all = "web_all.cli:main"
wa = "web_all.cli:main"

[project.urls]
Homepage = "https://github.com/web-all/web-all"
Documentation = "https://github.com/web-all/web-all#readme"
Repository = "https://github.com/web-all/web-all.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["web_all*"]

[tool.setuptools.package-data]
"web_all" = ["gui/*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
