[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-all"
version = "2.0.0"
description = "Universal Website Cloner & Crawler with Tor Support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "web-all Team", email = "team@web-all.dev"}
]
keywords = [
    "web scraper",
    "website cloner",
    "crawler",
    "tor",
    "onion",
    "downloader",
    "archive"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
web-all = "web_all.cli:main"

[project.urls]
Homepage = "https://github.com/web-all/web-all"
Documentation = "https://github.com/web-all/web-all#readme"
Repository = "https://github.com/web-all/web-all.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["web_all*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
