[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-all"
version = "5.0.0"
description = "The Internet's Universal Reproduction Engine - Beyond Cloning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "web-all Team", email = "team@web-all.dev"}
]
keywords = [
    "website",
    "cloner",
    "crawler",
    "scraper",
    "downloader",
    "archive",
    "mirror",
    "ai",
    "design-tokens",
    "component-extraction"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "playwright>=1.40.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "tqdm>=4.66.0",
    "cssutils>=2.9.0",
    "python-multipart>=0.0.6",
    "yt-dlp>=2024.0.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "httpx>=0.26.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
full = [
    "supabase>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "kubernetes>=29.0.0",
]

[project.scripts]
web-all = "web_all_v2.cli.main:main"
wa = "web_all_v2.cli.main:main"
weball = "web_all_v2.cli.main:main"

[project.urls]
Homepage = "https://github.com/web-all/web-all"
Documentation = "https://github.com/web-all/web-all#readme"
Repository = "https://github.com/web-all/web-all.git"
Issues = "https://github.com/web-all/web-all/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["web_all_v2*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
